--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.17.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
@@ -37,5 +38,7 @@
       "last 1 safari version"
     ]
   },
-  "engines": { "node": "14.16.1" }
+  "engines": {
+    "node": "14.16.1"
+  }
 }
